@@ -1,3 +1,8 @@
+2005-08-18  Damon Chaplin  <damon@gnome.org>
+
+	* gtkdoc-scangobj.in: added "const" in a few places to avoid lots
+	of warnings if all gcc warnings are on. (#312985)
+
 2005-08-15  Stefan Kost  <ensonic@users.sf.net>
 
 	* COPYING-DOCS:
